# config/passport.js
@@ -1,9 +1,11 @@
-// passport.js
+const passport = require('passport');
 const LocalStrategy = require('passport-local').Strategy;
+const GoogleStrategy = require('passport-google-oauth20').Strategy;
 const bcrypt = require('bcryptjs');
 const User = require('../models/userModel');
 
 module.exports = function(passport) {
+    // Local strategy configuration
     passport.use(new LocalStrategy({ usernameField: 'email' }, async (email, password, done) => {
         try {
             const user = await User.findOne({ email });
@@ -23,15 +25,40 @@ module.exports = function(passport) {
         }
     }));
 
-    passport.serializeUser((user, done) => {
+    // Google strategy configuration
+    passport.use(new GoogleStrategy({
+        clientID: process.env.GOOGLE_CLIENT_ID,
+        clientSecret: process.env.GOOGLE_CLIENT_SECRET,
+        callbackURL: '/auth/google/callback', 
+        passReqToCallback: true,
+        scope: ['profile', 'email'] // Add required scopes
+    }, async (req, token, refreshToken, profile, done) => {
+        try {
+            let user = await User.findOne({ googleId: profile.id });
+            if (!user) {
+                // Create a new user if not found
+                user = new User({
+                    googleId: profile.id,
+                    name: profile.displayName,
+                    email: profile.emails[0].value // Assuming the first email is primary
+                });
+                await user.save();
+            }
+            // Return the user
+            return done(null, user);
+        } catch (err) {
+            console.error('Google strategy error:', err);
+            return done(err);
+        }
+    }));
 
+    passport.serializeUser((user, done) => {
         done(null, user._id);
     });
+
     passport.deserializeUser(async (id, done) => {
         try {
-
             const user = await User.findById(id);
-            console.log('Deserialized user:', user);
             done(null, user);
         } catch (err) {
             console.error('Passport error:', err);
